--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -4,16 +4,15 @@ on:
   push:
     tags:
     - '*'
-
 jobs:
-  publish_sdis_310:
+  publish_sdist_wheel:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
       uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
+        python-version: '3.x'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
@@ -24,44 +23,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.TWINE_TOKEN }}
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
-
-  publish_wheel_39:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.9'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TWINE_TOKEN }}
-      run: |
-        python setup.py bdist_wheel
-        twine upload dist/*
-
-  publish_wheel_311:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.9'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel twine
-    - name: Build and publish
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TWINE_TOKEN }}
-      run: |
-        python setup.py bdist_wheel
         twine upload dist/*
